--- a/css/main.css
+++ b/css/main.css
@@ -58,6 +58,11 @@ body {
   font-size: 13px;
 }
 
+.menu__item a {
+  text-decoration: none;
+  color: white;
+}
+
 /* Main ---------------------------------------------------*/
 
 .main {
@@ -269,14 +274,20 @@ body {
   width: 1299px;
   height: 724px;
   display: flex;
-  flex-direction: column; 
+  flex-direction: column;
   align-items: center;
 }
 .contact-block__text {
   font-size: 24px;
   display: flex;
-  flex-direction: column;  
+  flex-direction: column;
   align-items: center;
+}
+
+.contact-block__text a {
+  margin-bottom: 35px;
+  text-decoration: none;
+  color: black;
 }
 
 .contact-block__text p {
@@ -286,11 +297,92 @@ body {
   width: 1088px;
   height: 554px;
 }
+
+/* form ---------------------------------------------------*/
+.form-block {
+  width: 1299px;
+  height: 428px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.form-block__body {
+  width: 910px;
+  height: 362px;
+  background-color: rgb(229, 174, 72, 0.75);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form-block__item {
+  width: 850px;
+  height: 54px;
+  margin: 50px 30px 0 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.form-block__text {
+  color: white;
+  font-size: 25px;
+}
+
+.form-block__input {
+ 
+}
+
+.form-block__input input{
+  width: 520px;
+  height: 54px;
+  border: none;
+}
+
+.form-block__button { 
+  margin-top: 50px;  
+}
+
+.form-block__button button {
+  width: 273px;
+  height: 54px;
+  background-color: rgb(33, 32, 33, 0.6);
+  font-size: 18px;
+  color: white;
+}
 /* Footer ---------------------------------------------------*/
 
 .footer {
-  background-color: #77688d;
-  padding: 30px;
-  text-align: center;
+  background-color: rgb(33, 32, 33, 0.6);  
   color: white;
+  height: 170px;
+  color: white;
+  font-family: "Inter", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer__container {
+  width: 1140px;
+  height: 110px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+
+.footer__text h4 {
+  font-size: 20px;
+  margin-bottom: 25px;
+  font-size: 15px;  
+}
+
+.footer__text p {
+  margin-bottom: 25px;
+}
+
+.footer__text a {
+ text-decoration: none;
+ color: white;
 }
